Fix of time input issue on mobile

--- a/public/intraday.css
+++ b/public/intraday.css
@@ -48,3 +48,7 @@ body {
   width: 10px;
   height: 10px;
 }
+
+input[type="time"] {
+  min-height: 2.5rem;
+}
